cd-application/policy/constraint-non-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireNonRoot     
metadata:
  name: require-non-root-visualizer
spec:
  enforcementAction: deny      

  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces: ["visualizer"]
